--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
             white-space: nowrap;
         }
 
-        .visit-buttons button.active
-        .kibou1-buttons button.active,
+        .visit-buttons button.active,
         .kibou2-buttons button.active,
         .kibou3-buttons button.active,
+        .kibou1-buttons button.active,
         .childsgender-buttons button.active,
         .Caesareansection-buttons button.active,
         .hairmakeup-buttons button.active,
@@ -953,7 +953,7 @@
         <div class="kibou1-buttons">
             <button type="button" id="firstkibou1" onclick="selectkibou1(this)">10時</button>
             <button type="button" id="repeatkibou1" onclick="selectkibou1(this)">13時</button>
-            <button type="button" id="sankibou1" onclick="selectkibou1(this)">相談したい</button>
+            <button type="button" id="sankibou1" onclick="selectkibou1(this)">検討中</button>
         </div>
 
         <div class="highlight-background">
@@ -970,7 +970,7 @@
         <div class="kibou2-buttons">
             <button type="button" id="firstkibou2" onclick="selectkibou2(this)">午前</button>
             <button type="button" id="repeatkibou2" onclick="selectkibou2(this)">午後</button>
-            <button type="button" id="sankibou2" onclick="selectkibou2(this)">相談したい</button>
+            <button type="button" id="sankibou2" onclick="selectkibou2(this)">検討中</button>
         </div>
 
         <div class="highlight-background">
@@ -987,7 +987,7 @@
         <div class="kibou3-buttons">
             <button type="button" id="firstkibou3" onclick="selectkibou3(this)">午前</button>
             <button type="button" id="repeatkibou3" onclick="selectkibou3(this)">午後</button>
-            <button type="button" id="sankibou3" onclick="selectkibou3(this)">相談したい</button>
+            <button type="button" id="sankibou3" onclick="selectkibou3(this)">検討中</button>
         </div>
 
         <div class="label">プランをお選びください<span class="required">必須</span></div>
@@ -1019,45 +1019,45 @@
             <input type="date" id="date4" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
         </div>
 
-        <div class="label">お子様のお名前</div>
+        <div class="labelContent">お子様のお名前</div>
         <textarea id="mugwortmainkid" placeholder="お子様のお名前をご記入ください。"></textarea>
 
-        <div class="label">お子様の性別</div>
+        <div class="labelContent">お子様の性別</div>
         <div class="childsgender-buttons">
             <button type="button" onclick="selectchildsgender(this)">男の子</button>
             <button type="button" onclick="selectchildsgender(this)">男の子</button>
         </div>
 
-        <div class="label">ご兄弟のお名前</div>
+        <div class="labelContent">ご兄弟のお名前</div>
         <textarea id="mugwortsiblinginfo" placeholder="お名前(読み仮名)・年齢・性別をご記入ください。"></textarea>
 
-        <div class="label">ご兄弟の性別</div>
+        <div class="labelContent">ご兄弟の性別</div>
         <div class="Caesareansection-buttons">
             <button type="button" onclick="selectCaesareansection(this)">男の子</button>
             <button type="button" onclick="selectCaesareansection(this)">女の子</button>
         </div>
 
-        <div class="label">ご兄弟の年齢</div>
+        <div class="labelContent">ご兄弟の年齢</div>
         <input type="text" id="mugwortparticipants" placeholder="例:0歳10ヶ月、3歳、5歳 など">
 
         <div class="info-text">【二人目以降】</div>
         <input type="text" id="mugwortmainkid2" placeholder="ご兄弟のお名前・性別・年齢をご記入ください">
 
-        <div class="label">撮影に参加される方の人数と続柄</div>
+        <div class="labelContent">撮影に参加される方の人数と続柄</div>
         <input type="text" id="mugwortshrinename" placeholder="撮影に参加される方の人数と続柄をご記入ください">
 
-        <div class="label">生花撮影ご希望の有無<span class="required">必須</span></div>
+        <div class="labelContent">生花撮影ご希望の有無<span class="required">必須</span></div>
         <div class="kimono-buttons">
             <button type="button" onclick="selectkimono(this)">有り</button>
             <button type="button" onclick="selectkimono(this)">無し</button>
-            <button type="button" onclick="selectkimono(this)">相談したい</button>
+            <button type="button" onclick="selectkimono(this)">検討中</button>
         </div>
 
-        <div class="label">ヘアメイクご希望の有無<span class="required">必須</span></div>
+        <div class="labelContent">ヘアメイクご希望の有無<span class="required">必須</span></div>
         <div class="hairmakeup-buttons">
             <button type="button" onclick="selecthairmakeup(this)">有り</button>
             <button type="button" onclick="selecthairmakeup(this)">無し</button>
-            <button type="button" onclick="selecthairmakeup(this)">相談したい</button>
+            <button type="button" onclick="selecthairmakeup(this)">検討中</button>
         </div>
 
         <div class="labelContent">ご質問/ご相談<br>（質問等お気軽にご記入ください）</div>
@@ -1091,7 +1091,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2007726498-Rbb3PbAm'
+                liffId: '2005254357-zKma9BZk'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -1515,7 +1515,7 @@
             kibou3Count = element.innerText;
 
             // 選択された訪問回数に対応する時間を取得
-            selectedkibou3Time = kibou3Times[kibou1Count];
+            selectedkibou3Time = kibou3Times[kibou3Count];
 
             console.log('選択された訪問回数の時間:', selectedkibou3Time);
 
