--- a/index.html
+++ b/index.html
@@ -205,9 +205,13 @@
         }
 
         .visit-buttons,
+        .coordination-buttons,
         .highschool-buttons,
         .symptoms,
-        .hairmakeup-buttons,
+        .footsize-buttons,
+        .clothessize-buttons,
+        .AnshinPack-buttons,
+        .OtonaAnshinPack-buttons,
         .menu-sections,
         .Freshflowerphotography-buttons,
         .irradiations {
@@ -218,9 +222,13 @@
         }
 
         .visit-buttons button,
+        .coordination-buttons button,
         .highschool-buttons button,
+        .AnshinPack-buttons button,
+        .OtonaAnshinPack-buttons button,
+        .clothessize-buttons button,
         .symptoms button,
-        .hairmakeup-buttons button,
+        .footsize-buttons button,
         .menu-sections button,
         .Freshflowerphotography-buttons button,
         .irradiations button {
@@ -236,9 +244,13 @@
         }
 
         .visit-buttons button.active,
-        .hairmakeup-buttons button.active,
+        .coordination-buttons button.active,
+        .footsize-buttons button.active,
         .highschool-buttons button.active,
+        .clothessize-buttons button.active,
         .symptoms button.active,
+        .AnshinPack-buttons button.active,
+        .OtonaAnshinPack-buttons button.active,
         .Freshflowerphotography-buttons button.active,
         .menu-sections button.active,
         .irradiations button.active {
@@ -969,18 +981,65 @@
         </div>
 
         <div class="labelContent">【お子様】<br>ご希望の衣装番号</div>
-        <input type="text" id="name" placeholder="ご希望の衣装番号を入力してください">
+        <input type="text" id="kisisyoubangou" placeholder="ご希望の衣装番号を入力してください">
 
         <div class="labelContent">ご希望の衣装名</div>
-        <input type="text" id="name" placeholder="ご希望の衣装名を入力してください">
+        <input type="text" id="kisisyoumei" placeholder="ご希望の衣装名を入力してください">
 
         <div class="labelContent">足のサイズ</div>
-        <div class="hairmakeup-buttons">
-            <button type="button" onclick="selecthairmakeup(this)">13～14cm</button>
-            <button type="button" onclick="selecthairmakeup(this)">15～16cm</button>
-            <button type="button" onclick="selecthairmakeup(this)">17～18cm</button>
-            <button type="button" onclick="selecthairmakeup(this)">19～20cm</button>
-            <button type="button" onclick="selecthairmakeup(this)">21～22cm</button>
+        <div class="footsize-buttons">
+            <button type="button" onclick="selectfootsize(this)">13～14cm</button>
+            <button type="button" onclick="selectfootsize(this)">15～16cm</button>
+            <button type="button" onclick="selectfootsize(this)">17～18cm</button>
+            <button type="button" onclick="selectfootsize(this)">19～20cm</button>
+            <button type="button" onclick="selectfootsize(this)">21～22cm</button>
+        </div>
+
+        <div class="labelContent">あんしんパックの有無</div>
+        <div class="AnshinPack-buttons">
+            <button type="button" onclick="selectAnshinPack(this)">有り</button>
+            <button type="button" onclick="selectAnshinPack(this)">無し</button>
+        </div>
+
+        <div class="labelContent">【大人】<br>ご希望の衣装番号</div>
+        <input type="text" id="Otonaisyoubangou" placeholder="ご希望の衣装番号を入力してください">
+
+        <div class="labelContent">ご希望の衣装名</div>
+        <input type="text" id="Otonaisyoumei" placeholder="ご希望の衣装名を入力してください">
+
+        <div class="labelContent">足のサイズ</div>
+        <input type="text" id="Otonaasinosaizu" placeholder="足のサイズの衣装名を入力してください">
+
+        <div class="labelContent">普段来ている服のサイズ</div>
+        <div class="clothessize-buttons">
+            <button type="button" onclick="selectclothessize(this)">7号</button>
+            <button type="button" onclick="selectclothessize(this)">8号</button>
+            <button type="button" onclick="selectclothessize(this)">9号</button>
+            <button type="button" onclick="selectclothessize(this)">10号</button>
+            <button type="button" onclick="selectclothessize(this)">11号</button>
+            <button type="button" onclick="selectclothessize(this)">12号</button>
+            <button type="button" onclick="selectclothessize(this)">13号</button>
+        </div>
+
+        <div class="labelContent">ご年齢</div>
+        <input type="text" id="Otonanenrei" placeholder="ご年齢を入力してください">
+
+        <div class="labelContent">帯小物コーディネートのご希望</div>
+        <div class="coordination-buttons">
+            <button type="button" onclick="selectcoordination(this)">かわいい感じ</button>
+            <button type="button" onclick="selectcoordination(this)">華やかな感じ</button>
+            <button type="button" onclick="selectcoordination(this)">かっこいい感じ</button>
+            <button type="button" onclick="selectcoordination(this)">上品な感じ</button>
+            <button type="button" onclick="selectcoordination(this)">お任せ</button>
+        </div>
+
+        <div class="labelContent">あんしんパックの有無</div>
+        <div class="OtonaAnshinPack-buttons">
+            <button type="button" onclick="selectOtonaAnshinPack(this)">有り</button>
+            <button type="button" onclick="selectOtonaAnshinPack(this)">無し</button>
+        </div>
+
+        <div class="info-text">在庫確認後、ご予約が確定しましたらご連絡させて頂きます。
         </div>
 
         <div class="labelContent">ご質問/ご相談<br>（質問等お気軽にご記入ください）</div>
@@ -994,7 +1053,11 @@
         let selectedSymptom = [];  // 配列として定義
         let selectedFullDate = '';
         let currentDate = new Date();
-        let hairmakeupCount = '';
+        let footsizeCount = '';
+        let coordinationCount = '';
+        let clothessizeCount = '';
+        let AnshinPackCount = '';
+        let OtonaAnshinPackCount = '';
         let FreshflowerphotographyCount = [];
         let availabilityCache = {};
         let irradiationsCount = ''; <!-- 選択された症状を格納する変数 -->
@@ -1115,15 +1178,75 @@
         }
 
         // 訪問回数の選択（初回・リピート）
-        function selecthairmakeup(element) {
-            document.querySelectorAll('.hairmakeup-buttons button').forEach(btn => btn.classList.remove('active'));
+        function selectAnshinPack(element) {
+            document.querySelectorAll('.AnshinPack-buttons button').forEach(btn => btn.classList.remove('active'));
             element.classList.add('active');
-            hairmakeupCount = element.innerText;
+            AnshinPackCount = element.innerText;
 
             // 選択された訪問回数に対応する時間を取得
-            selectedhairmakeupTime = hairmakeupTimes[hairmakeupCount];
+            selectedAnshinPackTime = AnshinPackTimes[AnshinPackCount];
 
-            console.log('選択された訪問回数の時間:', selectedhairmakeupTime);
+            console.log('選択された訪問回数の時間:', selectedAnshinPackTime);
+
+            // カレンダーを更新するために取得する日付を渡す
+            fetchAvailability(currentDate);
+        }
+
+        // 訪問回数の選択（初回・リピート）
+        function selectOtonaAnshinPack(element) {
+            document.querySelectorAll('.OtonaAnshinPack-buttons button').forEach(btn => btn.classList.remove('active'));
+            element.classList.add('active');
+            OtonaAnshinPackCount = element.innerText;
+
+            // 選択された訪問回数に対応する時間を取得
+            selectedOtonaAnshinPackTime = OtonaAnshinPackTimes[OtonaAnshinPackCount];
+
+            console.log('選択された訪問回数の時間:', selectedOtonaAnshinPackTime);
+
+            // カレンダーを更新するために取得する日付を渡す
+            fetchAvailability(currentDate);
+        }
+
+        // 訪問回数の選択（初回・リピート）
+        function selectfootsize(element) {
+            document.querySelectorAll('.footsize-buttons button').forEach(btn => btn.classList.remove('active'));
+            element.classList.add('active');
+            footsizeCount = element.innerText;
+
+            // 選択された訪問回数に対応する時間を取得
+            selectedfootsizeTime = footsizeTimes[footsizeCount];
+
+            console.log('選択された訪問回数の時間:', selectedfootsizeTime);
+
+            // カレンダーを更新するために取得する日付を渡す
+            fetchAvailability(currentDate);
+        }
+
+        // 訪問回数の選択（初回・リピート）
+        function selectclothessize(element) {
+            document.querySelectorAll('.clothessize-buttons button').forEach(btn => btn.classList.remove('active'));
+            element.classList.add('active');
+            clothessizeCount = element.innerText;
+
+            // 選択された訪問回数に対応する時間を取得
+            selectedclothessizeTime = clothessizeTimes[clothessizeCount];
+
+            console.log('選択された訪問回数の時間:', selectedclothessizeTime);
+
+            // カレンダーを更新するために取得する日付を渡す
+            fetchAvailability(currentDate);
+        }
+
+        // 訪問回数の選択（初回・リピート）
+        function selectcoordination(element) {
+            document.querySelectorAll('.coordination-buttons button').forEach(btn => btn.classList.remove('active'));
+            element.classList.add('active');
+            coordinationCount = element.innerText;
+
+            // 選択された訪問回数に対応する時間を取得
+            selectedcoordinationTime = coordinationTimes[coordinationCount];
+
+            console.log('選択された訪問回数の時間:', selectedcoordinationTime);
 
             // カレンダーを更新するために取得する日付を渡す
             fetchAvailability(currentDate);
@@ -1162,9 +1285,14 @@
             const formData = {
                 name: document.getElementById('name').value.trim(),
                 phone: document.getElementById('phone').value.trim(),
+                Otonanenrei: document.getElementById('Otonanenrei').value.trim(),
+                kisisyoubangou: document.getElementById('kisisyoubangou').value.trim(),
+                kisisyoumei: document.getElementById('kisisyoumei').value.trim(),
+                Otonaisyoubangou: document.getElementById('Otonaisyoubangou').value.trim(),
+                Otonaisyoumei: document.getElementById('Otonaisyoumei').value.trim(),
                 Yourresidentialaddress: document.getElementById('Yourresidentialaddress').value.trim(),
                 FreshflowerphotographyCount: selectedClothes, // ✅ ここに代入
-                hairmakeupCount,
+                footsizeCount, AnshinPackCount, OtonaAnshinPackCount, clothessizeCount, coordinationCount,
                 dates: [
                     document.getElementById('date1').value,
                     document.getElementById('date2').value,
@@ -1198,7 +1326,7 @@
 
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n≪衣装レンタル≫\n｟お名前｠\n・${formData.name}\n\n｟ご住所｠\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\n【希望日時】\n｟第一希望日｠\n${formatDate(formData.dates[0])}\n\n｟第二希望日｠\n${formatDate(formData.dates[1])}\n\n｟第三希望日｠\n${formatDate(formData.dates[2])}\n\n｟メニュー｠\n・衣装レンタル\n\n｟ご希望のお衣装｠\n・${formData.FreshflowerphotographyCount.length > 0 ? '・' + formData.FreshflowerphotographyCount.join('\n・') : '・未選択'}\n\n｟足のサイズ｠\n・${formData.hairmakeupCount}\n\n｟メッセージ｠\n・${formData.message}`
+                text: `【予約フォーム】\n≪衣装レンタル≫\n｟お名前｠\n・${formData.name}\n\n｟ご住所｠\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\n【希望日時】\n｟第一希望日｠\n${formatDate(formData.dates[0])}\n\n｟第二希望日｠\n${formatDate(formData.dates[1])}\n\n｟第三希望日｠\n${formatDate(formData.dates[2])}\n\n｟メニュー｠\n・衣装レンタル\n\n｟ご希望のお衣装｠\n・${formData.FreshflowerphotographyCount.length > 0 ? '・' + formData.FreshflowerphotographyCount.join('\n・') : '・未選択'}\n\n【お子様】\n｟衣装番号｠\n・${formData.kisisyoubangou}\n\n｟衣装名｠\n・${formData.kisisyoumei}\n\n｟足のサイズ｠\n・${formData.footsizeCount}\n\n｟あんしんパック｠\n・${formData.AnshinPackCount}\n\n【大人】\n｟衣装番号｠\n・${formData.Otonaisyoubangou}\n\n｟衣装名｠\n・${formData.Otonaisyoumei}\n\n｟足のサイズ｠\n・${formData.footsizeCount}\n\n｟服のサイズ｠\n・${formData.clothessizeCount}\n\n｟ご年齢｠\n・${formData.Otonanenrei}\n\n｟服のサイズ｠\n・${formData.coordinationCount}\n\n｟あんしんパック｠\n・${formData.OtonaAnshinPackCount}\n\n｟メッセージ｠\n・${formData.message}`
             }]).then(() => {
                 alert('お問合せありがとうございます。追って担当者から返信をさせて頂きます。');
                 liff.closeWindow();
