--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@
         </div>
 
         <div class="labelContent">ご年齢</div>
-        <input type="text" id="Otonanenrei" placeholder="ご年齢を入力してください">
+        <input type="tel" id="Otonanenrei" placeholder="ご年齢を入力してください">
 
         <div class="labelContent">帯小物コーディネートのご希望</div>
         <div class="coordination-buttons">
@@ -1285,6 +1285,7 @@
             const formData = {
                 name: document.getElementById('name').value.trim(),
                 phone: document.getElementById('phone').value.trim(),
+                Otonaasinosaizu: document.getElementById('Otonaasinosaizu').value.trim(),
                 Otonanenrei: document.getElementById('Otonanenrei').value.trim(),
                 kisisyoubangou: document.getElementById('kisisyoubangou').value.trim(),
                 kisisyoumei: document.getElementById('kisisyoumei').value.trim(),
@@ -1326,7 +1327,7 @@
 
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n≪衣装レンタル≫\n｟お名前｠\n・${formData.name}\n\n｟ご住所｠\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\n【希望日時】\n｟第一希望日｠\n${formatDate(formData.dates[0])}\n\n｟第二希望日｠\n${formatDate(formData.dates[1])}\n\n｟第三希望日｠\n${formatDate(formData.dates[2])}\n\n｟メニュー｠\n・衣装レンタル\n\n｟ご希望のお衣装｠\n・${formData.FreshflowerphotographyCount.length > 0 ? '・' + formData.FreshflowerphotographyCount.join('\n・') : '・未選択'}\n\n【お子様】\n｟衣装番号｠\n・${formData.kisisyoubangou}\n\n｟衣装名｠\n・${formData.kisisyoumei}\n\n｟足のサイズ｠\n・${formData.footsizeCount}\n\n｟あんしんパック｠\n・${formData.AnshinPackCount}\n\n【大人】\n｟衣装番号｠\n・${formData.Otonaisyoubangou}\n\n｟衣装名｠\n・${formData.Otonaisyoumei}\n\n｟足のサイズ｠\n・${formData.footsizeCount}\n\n｟服のサイズ｠\n・${formData.clothessizeCount}\n\n｟ご年齢｠\n・${formData.Otonanenrei}\n\n｟服のサイズ｠\n・${formData.coordinationCount}\n\n｟あんしんパック｠\n・${formData.OtonaAnshinPackCount}\n\n｟メッセージ｠\n・${formData.message}`
+                text: `【予約フォーム】\n≪衣装レンタル≫\n｟お名前｠\n・${formData.name}\n\n｟ご住所｠\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\n【希望日時】\n｟第一希望日｠\n${formatDate(formData.dates[0])}\n\n｟第二希望日｠\n${formatDate(formData.dates[1])}\n\n｟第三希望日｠\n${formatDate(formData.dates[2])}\n\n｟メニュー｠\n・衣装レンタル\n\n｟ご希望のお衣装｠\n${formData.FreshflowerphotographyCount.length > 0 ? '・' + formData.FreshflowerphotographyCount.join('\n・') : '・未選択'}\n\n【お子様】\n｟衣装番号｠\n・${formData.kisisyoubangou}\n\n｟衣装名｠\n・${formData.kisisyoumei}\n\n｟足のサイズ｠\n・${formData.footsizeCount}\n\n｟あんしんパック｠\n・${formData.AnshinPackCount}\n\n【大人】\n｟衣装番号｠\n・${formData.Otonaisyoubangou}\n\n｟衣装名｠\n・${formData.Otonaisyoumei}\n\n｟足のサイズ｠\n・${formData.Otonaasinosaizu}\n\n｟服のサイズ｠\n・${formData.clothessizeCount}\n\n｟ご年齢｠\n・${formData.Otonanenrei}\n\n｟帯小物コーディネート｠\n・${formData.coordinationCount}\n\n｟あんしんパック｠\n・${formData.OtonaAnshinPackCount}\n\n｟メッセージ｠\n・${formData.message}`
             }]).then(() => {
                 alert('お問合せありがとうございます。追って担当者から返信をさせて頂きます。');
                 liff.closeWindow();
