--- a/index.html
+++ b/index.html
@@ -135,6 +135,23 @@
             overflow: hidden;
         }
 
+        .labelhidariyose {
+            display: block;
+            margin-bottom: 10px;
+            padding: 3px;
+            font-weight: 600;
+            background-color: #00b08b;
+            color: white;
+            border-radius: 6px;
+            font-size: 18px;
+            text-align: center;
+            /* 中央揃え */
+            text-indent: 0px;
+            /* テキストを右に20pxずらす */
+            position: relative;
+            overflow: hidden;
+        }
+
         .labelmessezi {
             display: block;
             margin-top: 10px;
@@ -935,7 +952,7 @@
         <input type="tel" id="phone" placeholder="電話番号を入力してください" oninput="saveInput('phone')">
 
         <div class="label">住所<span class="required">必須</span></div>
-        <input type="tel" id="tellmetheaddress" placeholder="住所を入力してください" oninput="saveInput('tellmetheaddress')">
+        <input type="text" id="tellmetheaddress" placeholder="住所を入力してください" oninput="saveInput('tellmetheaddress')">
 
         <div class="label">来店回数<span class="required">必須</span></div>
         <div class="visit-buttons">
@@ -968,7 +985,7 @@
                 <button type="button" onclick="selectSymptom(this)" data-category="エアコンクリーニング" data-price="21000">高性能機種(¥21,000)</button>
             </div>
 
-        <div class="label">型式番号</div>
+        <div class="labelhidariyose">型式番号</div>
         <input type="tel" id="Modelnumber" placeholder="型式番号を入力してください">
 
             <div class="highlight-background">
@@ -1058,7 +1075,7 @@
         </div>
 
         <div class="highlight-background">
-            <span class="kibounitizi">第3希望日※任意</span>
+            <span class="kibounitizi">第3希望日（任意）</span>
         </div>
 
         <!-- カスタム placeholder 表示用 -->
@@ -1067,7 +1084,7 @@
             <input type="datetime-local" id="date3" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
         </div>
 
-        <div class="labelmessezi">メッセージ<br>（質問等お気軽にご記入ください）</div>
+        <div class="labelhidariyose">メッセージ<br>（質問等お気軽にご記入ください）</div>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
         <div class="label">ご予約内容</div>
@@ -1456,9 +1473,6 @@
 
             document.getElementById('firstVisit').classList.remove('active');
             document.getElementById('repeatVisit').classList.remove('active');
-            document.getElementById('sanVisit').classList.remove('active');
-            document.getElementById('yonVisit').classList.remove('active');
-            document.getElementById('goVisit').classList.remove('active');
             element.classList.add('active');
             visitCount = element.innerText;
 
