--- a/index.html
+++ b/index.html
@@ -1587,7 +1587,7 @@
             }
 
             if (!formData.visitCount) {
-                alert('年齢を入力してください。');
+                alert('来店回数を選択してください。');
                 return;
             }
 
@@ -1602,7 +1602,7 @@
             }
 
             if (!formData.dates[1]) {
-                alert('第1希望日を選択してください。');
+                alert('第2希望日を選択してください。');
                 return;
             }
 
