--- a/index.html
+++ b/index.html
@@ -132,25 +132,25 @@
             text-indent: 20px;
             /* テキストを右に20pxずらす */
             position: relative;
-            overflow: hidden;
         }
 
-        .labelhidariyose {
-            display: block;
-            margin-bottom: 10px;
-            padding: 3px;
-            font-weight: 600;
-            background-color: #00b08b;
-            color: white;
-            border-radius: 6px;
-            font-size: 18px;
-            text-align: center;
-            /* 中央揃え */
-            text-indent: 0px;
-            /* テキストを右に20pxずらす */
-            position: relative;
-            overflow: hidden;
-        }
+.labelhidariyose {
+    display: block;
+    margin-top: 10px; /* ← 追加 */
+    margin-bottom: 10px;
+    padding: 3px;
+    font-weight: 600;
+    background-color: #00b08b;
+    color: white;
+    border-radius: 6px;
+    font-size: 18px;
+    text-align: center;
+    /* 中央揃え */
+    text-indent: 0px;
+    /* テキストを右に20pxずらす */
+    position: relative;
+    overflow: hidden;
+}
 
         .labelmessezi {
             display: block;
